MG-2008-04-30-0: Enhancem.: o Added new test: "cli/comp_lifecycle/jvms/check.62.exp"
                              (Part 1/8 of hedeby issue #233)
                              (Need test for restarts of the components)
                 Review:    CR

CR-2008-04-30-1: Bugfix:    fixed hedeby test:
                            resources/reset/ambiguous/check.62.exp
                            (test used wrong bundle string)

CR-2008-04-30-0: Bugfix:    o fixed hedeby util procedures:
                               remove_user_from_admin_list() and
                               add_user_to_admin_list() did not use -au
                               command line switch.
                               => fixed manage_admin_user test
                            o code cleanup (hedeby)
                              in private_start_parallel_sdmadm_command()

AA-2008-04-29-0: Cleanup:   - JMX ssl set as default
                 Review:    RH

LP-2008-04-28-0: Bugfix:    o Fixed smf tests
                 Enhancem.: o jgdi_only tests now run on any cluster host
                 Review:    JG

MD-2008-04-28-0: Enhamcem.: o added new gettext marcos for installation changes

CR-2008-04-22-0: Enhancem.: o get_resource_info():
                              added new parameter: sdmadm_output
                              Used to get output of sdmadm command
                            o wait_for_resource_info():
                              Report output of sdmadm command if exit state != 0
                            o new test: "cli/show_resource/stress_test"
                 Review:    AA

RM-2008-04-22-0: Bugfix:    New switch for installation "-al", accept automatically
                            license, hedeby issue #427
                 Review:    CR

CR-2008-04-18-1: Enhancem.: Fixed security/filepermission test to reflect new
                            spooling behaviour of resource provider
